# parquet_csv_converter

./: Cargo.toml  README.md  create_large_test_parquet.py  create_test_parquet.py  test_data.csv  test_data.parquet
examples/: benchmark_mmap.rs  benchmark_row_vs_chunk.rs  benchmark_scaling.rs  mmap_conversion.rs  parallel_conversion.rs
src/: aligned_buffer.rs  aligned_reader.rs  aligned_writer.rs  chunked_csv_converter.rs  constants.rs  csv_input_direct.rs.bak  file_manager.rs  global_file_manager.rs  io_stats.rs  lib.rs  mmap_csv_writer.rs  parallel_csv_writer.rs  parallel_csv_writer_optimized.rs  parallel_csv_writer_simple.rs  parquet_input_direct.rs.bak  parquet_to_csv.rs
tests/: mmap_csv_writer_comprehensive.rs  mmap_csv_writer_edge_cases.rs  mmap_csv_writer_error_cases.rs  mmap_csv_writer_performance.rs  mmap_csv_writer_tests.rs  mmap_race_tests.rs
