[package]
name = "parquet_csv_converter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parquet_to_csv"
path = "src/bin/parquet_to_csv.rs"

[dependencies]
libc = "0.2"
rand = "0.9.1"
parquet = { version = "55.2.0" }
arrow = "55.2.0"
bytes = "1.10.1"
crossbeam = "0.8.4"
hex = "0.4.3"
chrono = "0.4.41"
num_cpus = "1.16"
memmap2 = "0.9"

[dev-dependencies]
tempfile = "3.2"